more contrast fixes

--- a/mockup-style.css
+++ b/mockup-style.css
@@ -58,7 +58,7 @@
    position: absolute;
    bottom: 1%;
    right: 1%;
-   color: gold;
+   color: yellow;
    text-align: right;
    font-size: 15px;
  }
